# liter-llm

./: .gitignore  .lychee.toml  .lycheecache  .pre-commit-config.yaml  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  alef.toml  biome.json  composer.json  llms.txt  mkdocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  zensical.toml
.ai-rulez/: config.yaml
.ai-rulez/context/: crate-structure.md  project-overview.md  proxy-server.md
.ai-rulez/rules/: schema-driven-types.md
.github/workflows/: ci-c-ffi.yaml  ci-docker.yaml  ci-docs.yaml  ci-local-llm.yaml  ci-node.yaml  ci-rust.yaml  ci-validate.yaml  ci-wasm.yaml  ci.yaml  docs.yaml  publish-docker.yaml  publish.yaml
.task/languages/: c.yml  csharp.yml  go.yml  java.yml  node.yml  php.yml  ruby.yml  rust.yml  wasm.yml
.task/tools/: general.yml  test-apps.yml  version-sync.yml
.task/workflows/: snippets.yml
crates/liter-llm/: Cargo.toml  README.md
crates/liter-llm-bindings-core/: Cargo.toml
crates/liter-llm-cli/: Cargo.toml
crates/liter-llm-ffi/: Cargo.toml  build.rs  cbindgen.toml  liter_llm.h
crates/liter-llm-ffi/include/: liter_llm.h
crates/liter-llm-ffi/src/: lib.rs
crates/liter-llm-node/: Cargo.toml  README.md  index.d.ts  package.json
crates/liter-llm-node/npm/darwin-arm64/: README.md  package.json
crates/liter-llm-node/npm/linux-arm64-gnu/: README.md  package.json
crates/liter-llm-node/npm/linux-x64-gnu/: README.md  package.json
crates/liter-llm-node/npm/win32-x64-msvc/: README.md  package.json
crates/liter-llm-node/src/: lib.rs
crates/liter-llm-php/: Cargo.toml
crates/liter-llm-php/src/: lib.rs
crates/liter-llm-proxy/: Cargo.toml
crates/liter-llm-py/: Cargo.toml
crates/liter-llm-py/src/: client.rs  error.rs  lib.rs  types.rs
crates/liter-llm-wasm/: Cargo.toml  README.md  package.json
crates/liter-llm-wasm/src/: lib.rs
crates/liter-lm/: Cargo.toml
crates/liter-lm-ffi/: Cargo.toml  build.rs  cbindgen.toml  liter_lm.h
crates/liter-lm-ffi/src/: lib.rs
crates/liter-lm-node/: Cargo.toml  README.md
crates/liter-lm-node/src/: lib.rs
crates/liter-lm-php/: Cargo.toml
crates/liter-lm-php/src/: lib.rs
crates/liter-lm-py/: Cargo.toml
crates/liter-lm-py/src/: client.rs  error.rs  lib.rs  types.rs
crates/liter-lm-wasm/: Cargo.toml  README.md
crates/liter-lm-wasm/src/: lib.rs
crates/liter-lm/src/: cost.rs  error.rs  lib.rs  tests.rs
crates/liter-lm/src/client/: config.rs  mod.rs
crates/liter-lm/src/http/: mod.rs  request.rs  retry.rs  streaming.rs
crates/liter-lm/src/provider/: anthropic.rs  azure.rs  bedrock.rs  mod.rs  vertex.rs
crates/liter-lm/src/tower/: fallback.rs  service.rs
crates/liter-lm/src/types/: chat.rs  common.rs  embedding.rs  models.rs
crates/liter-lm/tests/: contract.rs
docker/: Dockerfile
docs/: index.md  llms.txt  providers.md
docs/api/: api-c.md  api-csharp.md  api-elixir.md  api-go.md  api-java.md  api-php.md  api-python.md  api-ruby.md  api-rust.md  api-typescript.md  api-wasm.md  c-ffi.md  configuration.md  csharp.md  elixir.md  errors.md  go.md  java.md  php.md  python.md  ruby.md  rust.md  types.md  typescript.md  wasm.md
docs/concepts/: architecture.md  cost-estimation.md  feature-flags.md  providers.md  streaming.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: cli.md
docs/reference/: api-c.md  api-csharp.md  api-elixir.md  api-go.md  api-java.md  api-php.md  api-python.md  api-ruby.md  api-typescript.md  api-wasm.md  configuration.md  errors.md  types.md
docs/usage/: chat.md  configuration.md  embeddings.md  local-llms.md  streaming.md
e2e/brew/: test_batches.sh  test_contract.sh  test_embed.sh  test_error_handling.sh  test_proxy.sh  test_rerank.sh  test_responses.sh  test_search.sh  test_streaming.sh  test_tool_calling.sh  test_transcribe.sh
e2e/c/: Makefile  helpers.c  helpers.h  run_tests.sh  test_batches.c  test_budget.c  test_cache.c  test_chat.c  test_configuration.c  test_contract.c  test_custom_provider.c  test_embed.c  test_error_handling.c  test_files.c  test_hooks.c  test_image_generate.c  test_list_models.c  test_moderate.c  test_ocr.c  test_parity.c  test_proxy.c  test_rerank.c  test_responses.c  test_runner.h  test_search.c  test_smoke.c  test_speech.c  test_streaming.c  test_tool_calling.c  test_transcribe.c  test_types.c
e2e/csharp/: CacheTests.cs  ChatTests.cs  ConfigurationTests.cs  ContractTests.cs  EmbedTests.cs  ErrorHandlingTests.cs  Helpers.cs  ListModelsTests.cs  LiterLlm.E2eTests.csproj  LiterLlmE2E.csproj  OcrTests.cs  ProxyTests.cs  SearchTests.cs  SmokeTests.cs  StreamingTests.cs  ToolCallingTests.cs  TypesTests.cs
e2e/elixir/: .formatter.exs  mix.exs
e2e/go/: budget_test.go  cache_test.go  chat_test.go  configuration_test.go  contract_test.go  embed_test.go  error_handling_test.go  go.mod  helpers_test.go  list_models_test.go  ocr_test.go  parity_test.go  proxy_test.go  search_test.go  smoke_test.go  streaming_test.go  tool_calling_test.go  types_test.go
e2e/java/: pom.xml
e2e/node/: package.json
e2e/php/: composer.json  phpunit.xml
e2e/python/: pyproject.toml
e2e/r/: DESCRIPTION
e2e/ruby/: .rubocop.yml  Gemfile
e2e/rust/: Cargo.toml
e2e/typescript/: package.json  vitest.config.ts
e2e/wasm/: package.json  vitest.config.ts
fixtures/: schema.json
fixtures/batches/: edge_batch_empty_list.json  (+9 more)
schemas/: providers.json
scripts/: generate_providers_doc.py  readme_config.yaml  sync_versions.py
test_apps/python/: conftest.py  pyproject.toml
test_apps/python/tests/: test_batches.py  test_budget.py  test_cache.py  test_chat.py  test_configuration.py  test_contract.py  test_custom_provider.py  test_embed.py  test_error_handling.py  test_files.py  test_hooks.py  test_image_generate.py  test_list_models.py  test_moderate.py  test_ocr.py  test_parity.py  test_proxy.py  test_rerank.py  test_responses.py  test_search.py  test_smoke.py  test_speech.py  test_streaming.py  test_tool_calling.py  test_transcribe.py  test_types.py
tools/snippet-runner/: Cargo.toml
(+864 files in other folders)
