[workspace]
members = [
    "crates/liter-llm",
    "crates/liter-llm-bindings-core",
    "crates/liter-llm-ffi",
    "crates/liter-llm-node",
    "crates/liter-llm-php",
    "crates/liter-llm-py",
    "crates/liter-llm-wasm",
    "packages/elixir/native/liter_llm_rustler",
    "tools/e2e-generator",
    "tools/snippet-runner",
]
exclude = ["packages/ruby/ext/liter_llm_rb/native"]
resolver = "2"

[workspace.package]
version = "1.0.0-rc.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/kreuzberg-dev/liter-llm"
homepage = "https://kreuzberg.dev"
authors = ["Na'aman Hirschfeld <naaman@kreuzberg.dev>"]
description = "Universal LLM API client — 142+ providers, streaming, tool calling. Rust-powered with polyglot bindings."
keywords = ["llm", "openai", "api-client", "ai", "kreuzberg"]

[workspace.dependencies]
anyhow = "1"
base64 = "0.22" # Reserved for future base64-encoded embedding vectors support
bytes = "1"

# CLI (for tools)
clap = { version = "4", features = ["derive"] }
dashmap = "6"
futures-core = "0.3"
futures-util = "0.3"
jsonschema = "0.45"
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem"] }

# Binding frameworks
magnus = "0.8"
memchr = "2"
napi = { version = "3", features = ["napi4", "serde-json", "async"] }
napi-build = "2"
napi-derive = "3"
opentelemetry = "0.31"
pin-project-lite = "0.2"
pyo3 = { version = "0.28", features = ["abi3-py310"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
rayon = "1"
rb-sys = "0.9"
# Async / HTTP
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "multipart", "form"] }
rustler = "0.37"

# Security
secrecy = { version = "0.10", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

# Error handling
thiserror = "2"
tokenizers = { version = "0.22", default-features = false, features = ["http", "fancy-regex"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1" # Reserved for future streaming utilities and stream combinators
toml = "1.1"
tower = { version = "0.5", features = ["retry", "limit", "timeout", "buffer", "load-shed", "steer", "util"] }
tower-http = { version = "0.6", features = ["follow-redirect", "set-header", "sensitive-headers", "trace", "request-id"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-opentelemetry = "0.32"
url = "2" # Reserved for future URL parsing and validation utilities
walkdir = "2.5"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
which = "8"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
