[project]
name = "liter-llm"
version = "1.1.0"
description = "A universal LM API client with polyglot bindings — fast, type-safe, compiled"
readme = "README.md"
keywords = [
  "ai",
  "api-client",
  "kreuzberg",
  "llm",
  "openai",
]
license = "MIT"
authors = [ { name = "Na'aman Hirschfeld", email = "naaman@kreuzberg.dev" } ]
requires-python = ">=3.10.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
urls.documentation = "https://github.com/kreuzberg-dev/liter-llm#readme"
urls.homepage = "https://github.com/kreuzberg-dev/liter-llm"
urls.issues = "https://github.com/kreuzberg-dev/liter-llm/issues"
urls.repository = "https://github.com/kreuzberg-dev/liter-llm"

[dependency-groups]
dev = [
  "anyio>=4.10.0",
  "jinja2>=3.1.0",
  "jsonschema>=4.0.0",
  "mypy>=1.18.2",
  "prek>=0.2.19",
  "pytest>=9.0.0",
  "pyyaml>=6.0.0",
  "ruff>=0.14.6",
  "typing-extensions>=4.15.0",
  "uv-bump",
]
doc = [
  "mkdocstrings[python]>=1.0.0",
  "zensical",
]

[tool.uv]
sources.uv-bump = { git = "https://github.com/Goldziher/uv-bump" }
workspace.exclude = [
  "tests/test_apps/*",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = [ "scripts", "tools/schema-bootstrap" ]
exclude = [ "tests/test_apps" ]
format.docstring-code-line-length = 120
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN401", # dynamically typed ANY
  "COM812", # Conflicts with formatter
  "D100",   # pydocstyle - missing docstring in public module
  "D104",   # pydocstyle - missing docstring in public package
  "D107",   # pydocstyle - missing docstring in __init__
  "D205",   # pydocstyle - 1 blank line required between summary line and description
  "E501",   # pycodestyle line too long, handled by ruff format
  "EM",     # Exception messages
  "FBT",    # Boolean values
  "FIX",    # we allow todo and fixme comments
  "ISC001", # Conflicts with formatter
  "TD",     # we allow todo and fixme comments
  "TRY",    # Try except block, rules are too strict
]
lint.per-file-ignores."scripts/**/*.*" = [
  "B904",    # raise without from
  "BLE001",  # broad exception catch
  "C901",    # complexity
  "D",       # docstrings
  "G004",    # f-string in logging
  "G201",    # logging .exception vs .error
  "PERF203", # try in loop
  "PERF401", # list comprehension
  "PLC0415", # import not at top
  "PLR0912", # too many branches
  "PLR0915", # too many statements
  "PLW2901", # loop variable overwritten
  "PTH123",  # open() vs Path.open()
  "S",       # security (subprocess, etc.)
  "SIM105",  # contextlib.suppress
  "T201",    # print
]
lint.isort.known-first-party = [ "scripts" ]
lint.pydocstyle.convention = "google"

[tool.codespell]
ignore-words-list = "afterall,crate,fo,inout,ist,ser,wast,wit"

[tool.pyproject-fmt]
keep_full_version = true
max_supported_python = "3.14"

[tool.mypy]
packages = [ "scripts" ]
python_version = "3.10"
disallow_untyped_decorators = true
disallow_any_unimported = true
show_error_codes = true
strict = true
warn_unreachable = true
