[package]
name = "liter-llm-bindings-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Shared utilities for liter-llm language bindings — case conversion, config parsing, error formatting, runtime management"

[features]
default = ["full"]
full = ["dep:liter-llm", "dep:tokio"]

[dependencies]
liter-llm = { path = "../liter-llm", version = "1.0.0-rc.9", features = ["full"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1"
