[package]
name = "liter-llm-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "C FFI bindings for liter-llm — universal LLM API client with 142+ providers. Rust-powered."
keywords = ["ffi", "bindings", "llm", "api-client", "ai"]
categories = ["development-tools::ffi", "api-bindings"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []

[dependencies]
base64.workspace = true
bytes.workspace = true
futures-core.workspace = true
liter-llm = { path = "../liter-llm", version = "1.0.0-rc.4", features = ["full"] }
liter-llm-bindings-core = { path = "../liter-llm-bindings-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
cbindgen = "0.29"
