[package]
name = "liter-llm-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Node.js native bindings for liter-llm universal LM API client"
keywords = ["nodejs", "napi", "llm", "api-client", "bindings"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-core = { workspace = true }
liter-llm = { path = "../liter-llm" }
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
