[package]
name = "liter-llm-php"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "PHP bindings for liter-llm universal LM API client"
keywords = ["php", "ffi", "llm", "api-client", "bindings"]
categories = ["api-bindings"]

[lib]
name = "liter_llm_php"
crate-type = ["cdylib"]
test = false

[features]
default = []

[dependencies]
ext-php-rs = "0.15"
futures-core = { workspace = true }
liter-llm = { path = "../liter-llm" }
serde_json = { workspace = true }
tokio = { workspace = true }
