[package]
name = "liter-llm-php"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "PHP bindings for liter-llm — universal LLM API client with 142+ providers. Rust-powered."
keywords = ["php", "ffi", "llm", "api-client", "bindings"]
categories = ["api-bindings"]

[lib]
name = "liter_llm_php"
crate-type = ["cdylib"]
test = false

[features]
default = []

[dependencies]
ext-php-rs = "0.15"
futures-core = { workspace = true }
liter-llm = { path = "../liter-llm", version = "1.2.0", features = ["full"] }
liter-llm-bindings-core = { path = "../liter-llm-bindings-core", version = "1.2.0" }
serde_json = { workspace = true }
