[package]
name = "liter-llm-php"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "PHP bindings for liter-llm — universal LLM API client with 142+ providers. Rust-powered."
keywords = ["php", "ffi", "llm", "api-client", "bindings"]
categories = ["api-bindings"]

[lib]
name = "liter_llm_php"
crate-type = ["cdylib"]
test = false

[features]
default = []

[dependencies]
ext-php-rs = "0.15"
liter-llm = { path = "../liter-llm", version = "1.2.2", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
