[package]
name = "liter-llm-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Python bindings for liter-llm — universal LLM API client with 142+ providers. Rust-powered."
keywords = ["python", "pyo3", "llm", "api-client", "bindings"]
categories = ["api-bindings"]

[lib]
name = "_internal_bindings"
crate-type = ["cdylib", "rlib"]
test = false

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
futures-core = { workspace = true }
liter-llm = { path = "../liter-llm", version = "1.2.0", features = ["full"] }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
