[package]
name = "liter-llm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "WebAssembly bindings for liter-llm — universal LLM API client with 142+ providers. Rust-powered."
keywords = ["wasm", "webassembly", "llm", "api-client", "bindings"]
categories = ["api-bindings", "wasm"]

[package.metadata.cargo-machete]
ignored = ["liter-llm", "web-sys"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
js-sys = "0.3"
liter-llm = { path = "../liter-llm", version = "1.1.0", default-features = false }
liter-llm-bindings-core = { path = "../liter-llm-bindings-core", version = "1.1.0", default-features = false }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "ReadableStream",
    "ReadableStreamDefaultReader",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
