[package]
name = "liter-llm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "WebAssembly bindings for liter-llm — universal LLM API client with 142+ providers. Rust-powered."
keywords = ["wasm", "webassembly", "llm", "api-client", "bindings"]
categories = ["api-bindings", "wasm"]

[package.metadata.cargo-machete]
ignored = ["liter-llm", "web-sys"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
liter-llm = { path = "../liter-llm", version = "1.2.2", default-features = false }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
