[package]
name = "liter-lm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "WebAssembly bindings for liter-lm universal LM API client"
keywords = ["wasm", "webassembly", "llm", "api-client", "bindings"]
categories = ["api-bindings", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
js-sys = "0.3"
# TODO: Wire liter-lm core types for request validation in a future version.
# The WASM binding currently accepts raw JS objects and forwards them via fetch.
# Re-add liter-lm = { path = "../liter-lm", default-features = false } when
# request validation through liter-lm types is implemented.
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
