[package]
name = "snippet-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "snippet_runner"
path = "src/lib.rs"

[[bin]]
name = "snippet-runner"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
